force-app/main/default/objects/Nao_Conformidade__c/Nao_Conformidade__c.object-meta.xml
<CustomObject>
    <label>Não Conformidade</label>
    <nameField>
        <displayFormat>NC-{00000}</displayFormat>
        <label>NC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Não Conformidade</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>