force-app/main/default/objects/Nao_Conformidade__c/fields/Acao_corretiva_Detalhada__c.field-meta.xml
<CustomField>
    <fullName>Acao_corretiva_Detalhada__c</fullName>
    <label>Ação corretiva detalhada</label>
    <type>TextArea</type>
</CustomField>