force-app/main/default/objects/Nao_Conformidade__c/fields/ACAo_imediata__c.field-meta.xml
<CustomField>
    <fullName>ACAo_imediata__c</fullName>
    <label>Ação imediata</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APROVADO COM DESVIO</fullName>
            </value>
            <value>
                <fullName>REPROVADO</fullName>
            </value>
            <value>
                <fullName>DEVOLVER</fullName>
            </value>
            <value>
                <fullName>REPROCESSAR</fullName>
            </value>
            <value>
                <fullName>SUCATEAR</fullName>
            </value>
            <value>
                <fullName>OUTROS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>