force-app/main/default/objects/Nao_Conformidade__c/fields/Aprovado__c.field-meta.xml
<CustomField>
    <fullName>Aprovado__c</fullName>
    <label>Análise do supervisor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APROVADO</fullName>
            </value>
            <value>
                <fullName>REJEITADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>