force-app/main/default/objects/Nao_Conformidade__c/fields/Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Auditoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auditoria</label>
    <referenceTo>Auditoria__c</referenceTo>
    <relationshipLabel>Não Conformidade</relationshipLabel>
    <relationshipName>N_o_Conformidade</relationshipName>
    <type>Lookup</type>
</CustomField>