force-app/main/default/objects/Nao_Conformidade__c/fields/Causas__c.field-meta.xml
<CustomField>
    <fullName>Causas__c</fullName>
    <label>Causas</label>
    <type>TextArea</type>
</CustomField>