force-app/main/default/objects/Nao_Conformidade__c/fields/Data_da_Aprova_o__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Aprova_o__c</fullName>
    <label>Data da Aprovação da Ação Corretiva</label>
    <type>Date</type>
</CustomField>