force-app/main/default/objects/Nao_Conformidade__c/fields/Data_de_Abertura_do_RNC__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Abertura_do_RNC__c</fullName>
    <label>Data de Abertura do RNC</label>
    <type>Date</type>
</CustomField>