force-app/main/default/objects/Nao_Conformidade__c/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADMINISTRATIVO</fullName>
            </value>
            <value>
                <fullName>COMERCIAL</fullName>
            </value>
            <value>
                <fullName>DEPARAMENTO PESSOAL</fullName>
            </value>
            <value>
                <fullName>DESENVOLVIMENTO</fullName>
            </value>
            <value>
                <fullName>FINANCEIRO</fullName>
            </value>
            <value>
                <fullName>GOVERNO</fullName>
            </value>
            <value>
                <fullName>LOGÍSTICA</fullName>
            </value>
            <value>
                <fullName>MARKETING</fullName>
            </value>
            <value>
                <fullName>RH</fullName>
            </value>
            <value>
                <fullName>SERVIÇO</fullName>
            </value>
            <value>
                <fullName>LOCAÇÂO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>