force-app/main/default/objects/Nao_Conformidade__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descrição detalhada a cerca da NC</label>
    <type>TextArea</type>
</CustomField>