force-app/main/default/objects/Nao_Conformidade__c/fields/Detalhes_outros__c.field-meta.xml
<CustomField>
    <fullName>Detalhes_outros__c</fullName>
    <label>Detalhes (outros)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>