force-app/main/default/objects/Nao_Conformidade__c/fields/Empresa__c.field-meta.xml
<CustomField>
    <fullName>Empresa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Não Conformidade</relationshipLabel>
    <relationshipName>N_o_Conformidade</relationshipName>
    <type>Lookup</type>
</CustomField>