force-app/main/default/objects/Nao_Conformidade__c/fields/Fornecedor__c.field-meta.xml
<CustomField>
    <fullName>Fornecedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fornecedor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>001i00000085QYb</value>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>0015A00002GC6r6</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Não Conformidade (Fornecedor)</relationshipLabel>
    <relationshipName>N_o_Conformidade1</relationshipName>
    <type>Lookup</type>
</CustomField>