force-app/main/default/objects/Nao_Conformidade__c/fields/Funcionario__c.field-meta.xml
<CustomField>
    <fullName>Funcionario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resposável pela não conformidade</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <value>001i00000085QYb</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Não Conformidade</relationshipLabel>
    <relationshipName>Nao_Conformidade</relationshipName>
    <type>Lookup</type>
</CustomField>