force-app/main/default/objects/Nao_Conformidade__c/fields/Gravidade__c.field-meta.xml
<CustomField>
    <fullName>Gravidade__c</fullName>
    <label>Gravidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEM GRAVIDADE</fullName>
            </value>
            <value>
                <fullName>POUCA GRAVIDADE</fullName>
            </value>
            <value>
                <fullName>GRAVE</fullName>
            </value>
            <value>
                <fullName>MUITO GRAVE</fullName>
            </value>
            <value>
                <fullName>EXTREMAMENTE GRAVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>