force-app/main/default/objects/Nao_Conformidade__c/fields/Gravidade_Imagem__c.field-meta.xml
<CustomField>
    <fullName>Gravidade_Imagem__c</fullName>
    <formula>IF(
    NOT(ISBLANK(TEXT(Gravidade__c))), 
    IMAGE(
        CASE(
            TEXT(Gravidade__c),
            &quot;SEM GRAVIDADE&quot;, &quot;https://hospcom--c.vf.force.com/resource/1739890359000/riskBarSEMGRAVIDADE&quot;,
            &quot;POUCA GRAVIDADE&quot;, &quot;https://hospcom--c.vf.force.com/resource/1739890444000/riskBarPOUCAGRAVIDADE&quot;,
            &quot;GRAVE&quot;, &quot;https://hospcom--c.vf.force.com/resource/1739890422000/riskBarGRAVE&quot;,
            &quot;MUITO GRAVE&quot;, &quot;https://hospcom--c.vf.force.com/resource/1739890396000/riskBarMUITOGRAVE&quot;,
            &quot;EXTREMAMENTE GRAVE&quot;, &quot;https://hospcom--c.vf.force.com/resource/1739890359000/riskBarEXTREMAMENTEGRAVE&quot;,
            &quot;&quot;  /* Caso não encontre correspondência */
        ),
        &quot;Nível de Gravidade&quot;
    ),
    &quot;&quot;  /* Se Gravidade__c estiver vazio, retorna nada */
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gravidade Imagem</label>
    <type>Text</type>
</CustomField>