force-app/main/default/objects/Nao_Conformidade__c/fields/Item_da_Nomar__c.field-meta.xml
<CustomField>
    <fullName>Item_da_Nomar__c</fullName>
    <label>Item da Norma</label>
    <length>100</length>
    <type>Text</type>
</CustomField>