force-app/main/default/objects/Nao_Conformidade__c/fields/N_o_conformidade__c.field-meta.xml
<CustomField>
    <fullName>N_o_conformidade__c</fullName>
    <label>Não conformidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>