force-app/main/default/objects/Nao_Conformidade__c/fields/NF1__c.field-meta.xml
<CustomField>
    <fullName>NF1__c</fullName>
    <label>NF</label>
    <length>50</length>
    <type>Text</type>
</CustomField>