force-app/main/default/objects/Nao_Conformidade__c/fields/Origem_da_nao_conformidade__c.field-meta.xml
<CustomField>
    <fullName>Origem_da_nao_conformidade__c</fullName>
    <label>Origem da não conformidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUDITORIA INTERNA</fullName>
            </value>
            <value>
                <fullName>PROCESSO</fullName>
            </value>
            <value>
                <fullName>PRODUTO</fullName>
            </value>
            <value>
                <fullName>RECLAMAÇÃO DE CLIENTE</fullName>
            </value>
            <value>
                <fullName>SERVIÇO</fullName>
            </value>
            <value>
                <fullName>SISTEMA DA QUALIDADE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>