force-app/main/default/objects/Nao_Conformidade__c/fields/Parecer__c.field-meta.xml
<CustomField>
    <fullName>Parecer__c</fullName>
    <label>Parecer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MERECE AÇÃO CORRETIVA</fullName>
            </value>
            <value>
                <fullName>MERECE AÇÃO PREVENTICA</fullName>
            </value>
            <value>
                <fullName>NÃO MERECE AÇÃO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>