force-app/main/default/objects/Nao_Conformidade__c/fields/Plano_de_A_o__c.field-meta.xml
<CustomField>
    <fullName>Plano_de_A_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plano de Ação</label>
    <referenceTo>P__c</referenceTo>
    <relationshipLabel>Não Conformidade</relationshipLabel>
    <relationshipName>N_o_Conformidade</relationshipName>
    <type>Lookup</type>
</CustomField>