force-app/main/default/objects/Nao_Conformidade__c/fields/Poss_vel_causa_da_n_o_conformidade__c.field-meta.xml
<CustomField>
    <fullName>Poss_vel_causa_da_n_o_conformidade__c</fullName>
    <label>Possível causa da não conformidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>