force-app/main/default/objects/Nao_Conformidade__c/fields/Registro_de_Reclam_o_do_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Registro_de_Reclam_o_do_Cliente__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Adicione o numero do Registro de Reclamação de Cliente</inlineHelpText>
    <label>Registro de Reclamção do Cliente</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Não Conformidade</relationshipLabel>
    <relationshipName>N_o_Conformidade</relationshipName>
    <type>Lookup</type>
</CustomField>