force-app/main/default/objects/Nao_Conformidade__c/fields/Setor__c.field-meta.xml
<CustomField>
    <fullName>Setor__c</fullName>
    <label>Setor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departamentos</valueSetName>
    </valueSet>
</CustomField>