force-app/main/default/objects/Nao_Conformidade__c/fields/Tend_ncia__c.field-meta.xml
<CustomField>
    <fullName>Tend_ncia__c</fullName>
    <label>Tendência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NÃO IRÁ MUDAR</fullName>
            </value>
            <value>
                <fullName>PIORA EM LONGO PRAZO</fullName>
            </value>
            <value>
                <fullName>PIORA A MÉDIO PRAZO</fullName>
            </value>
            <value>
                <fullName>PIORA A CURTO PRAZO</fullName>
            </value>
            <value>
                <fullName>PIORA IMEDIATA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>