force-app/main/default/objects/Nao_Conformidade__c/fields/TIpo_de_a_o_corretiva__c.field-meta.xml
<CustomField>
    <fullName>TIpo_de_a_o_corretiva__c</fullName>
    <label>TIpo de ação corretiva</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corretiva</fullName>
            </value>
            <value>
                <fullName>Preventiva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>