force-app/main/default/objects/Nao_Conformidade__c/fields/Tipo_de_nao_conformidade__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_nao_conformidade__c</fullName>
    <label>Tipo de não conformidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REAL</fullName>
            </value>
            <value>
                <fullName>POTENCIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>