force-app/main/default/objects/Nao_Conformidade__c/fields/Urg_ncia__c.field-meta.xml
<CustomField>
    <fullName>Urg_ncia__c</fullName>
    <label>Urgência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PODE ESPERAR</fullName>
            </value>
            <value>
                <fullName>POUCA URGÊNCIA</fullName>
            </value>
            <value>
                <fullName>URGENTE E MERECE ATENÇÃO</fullName>
            </value>
            <value>
                <fullName>MUITA URGÊNCIA</fullName>
            </value>
            <value>
                <fullName>SECESSITA DE AÇÃO IMEDIATA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>