force-app/main/default/objects/Nao_Conformidade__c/recordTypes/Externa.recordType-meta.xml
<RecordType>
    <fullName>Externa</fullName>
    <active>true</active>
    <label>Externa</label>
</RecordType>