force-app/main/default/objects/Nao_Conformidade__c/validationRules/is_new.validationRule-meta.xml
<ValidationRule>
    <fullName>is_new</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;  !ISBLANK(TEXT(ACAo_imediata__c))</errorConditionFormula>
    <errorDisplayField>ACAo_imediata__c</errorDisplayField>
    <errorMessage>esse campo deve estar vazio na criação</errorMessage>
</ValidationRule>