force-app/main/default/objects/Nao_Conformidade__c/validationRules/parecer.validationRule-meta.xml
<ValidationRule>
    <fullName>parecer</fullName>
    <active>false</active>
    <errorConditionFormula>ISNEW() == false &amp;&amp;  TEXT(Parecer__c) == null</errorConditionFormula>
    <errorDisplayField>Parecer__c</errorDisplayField>
    <errorMessage>Preencha o parecer</errorMessage>
</ValidationRule>