force-app/main/default/objects/Nao_Conformidade__c/validationRules/status_daniel.validationRule-meta.xml
<ValidationRule>
    <fullName>status_daniel</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Aprovado__c)  != &quot;&quot; &amp;&amp;  TEXT(Parecer__c) = &quot;&quot;</errorConditionFormula>
    <errorMessage>Você precisa atualizar o campos de parecer</errorMessage>
</ValidationRule>