force-app/main/default/objects/Nao_Conformidade__c/validationRules/Valida_Analise_do_supervisor.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Analise_do_supervisor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(), NOT(ISPICKVAL(Aprovado__c, &quot;&quot;)))</errorConditionFormula>
    <errorMessage>Não é possível criar uma Não Conformidade com o campo Analise do Supervisor registrado</errorMessage>
</ValidationRule>