force-app/main/default/objects/Nao_Conformidade__c/listViews/NAO_CONFORMIDADES.listView-meta.xml
<ListView>
    <fullName>NAO_CONFORMIDADES</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>NÃO CONFORMIDADES</label>
</ListView>